--- a/docs/oscmp-midterm/oscmp midterm 8a6e958a99b545d0a152681ca02447e7.md
+++ b/docs/oscmp-midterm/oscmp midterm 8a6e958a99b545d0a152681ca02447e7.md
@@ -224,11 +224,11 @@ int main(void) {
 
 seL4Runtime 会先做一些 C 语言运行时的初始化工作。
 
-![Untitled](docs/oscmp-midterm/oscmp%20midterm%208a6e958a99b545d0a152681ca02447e7/Untitled.png)
+![Untitled](oscmp%20midterm%208a6e958a99b545d0a152681ca02447e7/Untitled.png)
 
 与 seL4 结果对比：
 
-![Untitled](docs/oscmp-midterm/oscmp%20midterm%208a6e958a99b545d0a152681ca02447e7/Untitled%201.png)
+![Untitled](oscmp%20midterm%208a6e958a99b545d0a152681ca02447e7/Untitled%201.png)
 
 # 分工和协作
 
